--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.3",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.6"
   }
 }
